Use FFMpeg Wrapper
Use JPG instead of PNG for data - it uses a fraction of disk space and it faster to save
Use java process to extract frames instead of console command

--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ repositories {
 
 dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.3'
+    compile 'net.bramp.ffmpeg:ffmpeg:0.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 }
