Compress event logs by removing redundant data points

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'info.picocli:picocli:4.5.2'
-    compile 'net.bramp.ffmpeg:ffmpeg:0.6.2'
+    implementation 'net.bramp.ffmpeg:ffmpeg:0.6.2'
+    // For Murmur3 hashing
+    implementation 'com.google.guava:guava:30.0-jre'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
 }
