--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lint:fix": "vue-cli-service lint --fix"
+    "lint:fix": "vue-cli-service lint --fix",
+    "deploy": "docker build -t gronkhsykrim:$npm_package_version -f docker/Dockerfile . && docker save gronkhsykrim:$npm_package_version | bzip2 | ssh root@www.meldanor.me 'bunzip2 | docker load'"
   },
   "dependencies": {
+    "compression-webpack-plugin": "^6.1.1",
     "core-js": "^3.6.5",
     "vega": "^5.17.0",
     "vega-embed": "^6.13.0",
