--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+/coalMine/privateScripts/
